--- a/login.html
+++ b/login.html
@@ -7,9 +7,11 @@
 </head>
 <body>
   <h2>Login</h2>
-  <input type="text" id="usuario" placeholder="Usuário" autocomplete="off" />
-  <input type="password" id="senha" placeholder="Senha" autocomplete="off" />
+  <input type="text" id="usuario" placeholder="Usuário"/>
+  <input type="password" id="senha" placeholder="Senha"/>
   <button id="btnLogin">Entrar</button>
+
+  <p id="mensagem" class="mensagem-erro"></p>
 
   <script src="login.js"></script>
 </body>
