fix board e inicio css

--- a/login.html
+++ b/login.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Login - Lousa</title>
+  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h2>Login</h2>
-  <input type="text" id="usuario" placeholder="Usuário"/>
-  <input type="password" id="senha" placeholder="Senha"/>
-  <button id="btnLogin">Entrar</button>
+  <h2 class="pixel-font">bunnyboard</h2>
+  <input type="text" id="usuario" placeholder="Usuário" class="pixel-font"/>
+  <input type="password" id="senha" placeholder="Senha" class="pixel-font"/>
+  <button id="btnLogin" class="pixel-font">Entrar</button>
 
   <p id="mensagem" class="mensagem-erro"></p>
 
