--- a/login.html
+++ b/login.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
+  <div class="window-controls">
+    <img src="src/images/BtnMinimize.png" id="minimize-btn" class="window-buttons"/>
+    <img src="src/images/close_window_button.png" id="close-btn" class="window-buttons"/>
+  </div>
+  
   <img src="src/images/bunny_logo.png" alt="Logo" class="logo"/>
   <h2 class="pixel-font title">bunnyboard</h2>
 
